--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <article class="reco">
                 <!-- <p>Recommanded</p> -->
                 <img
-                  src="/img/accomodation/Retiro-Park.jpg"
+                  src="img/accomodation/Retiro-Park.jpg"
                   alt="Retiro-Park"
                 />
                 <h3>Retiro-Park</h3>
@@ -80,7 +80,7 @@
             </a>
             <a href="">
               <article class="reco">
-                <img src="/img/accomodation/Royal-Palace-of-Madrid.jpg" />
+                <img src="img/accomodation/Royal-Palace-of-Madrid.jpg" />
                 <h3>Royal-Palace-of-Madrid</h3>
                 <p>Stay from $46/night</p>
                 <div>
@@ -129,7 +129,7 @@
             <a href="">
               <article class="reco">
                 <img
-                  src="/img/accomodation/Prado-Museum.jpg"
+                  src="img/accomodation/Prado-Museum.jpg"
                   alt="Prado-Museum"
                 />
                 <h3>Prado-Museum</h3>
@@ -146,7 +146,7 @@
 
             <a href="">
               <article>
-                <img src="/img/accomodation/Gran-Vía.jpg" alt="Gran-Vía" />
+                <img src="img/accomodation/Gran-Vía.jpg" alt="Gran-Vía" />
                 <h3>Gran-Vía</h3>
                 <p>Stay from $40/night</p>
                 <div>
@@ -168,7 +168,7 @@
             <a href="#">
               <article class="Popu">
                 <!-- <p>Popular</p> -->
-                <img src="/img/accomodation/Retiro-Park.jpg" alt="Retiro-Park" />
+                <img src="img/accomodation/Retiro-Park.jpg" alt="Retiro-Park" />
                 <div>
                   <h3>Retiro-Park</h3>
                   <p>Stay from $40/night</p>
@@ -184,7 +184,7 @@
             </a>
             <a href="#">
               <article class="Popu">
-                <img src="/img/accomodation/Gran-Vía.jpg" alt="Gran-Vía" />
+                <img src="img/accomodation/Gran-Vía.jpg" alt="Gran-Vía" />
                 <div>
                   <h3>Gran-Vía</h3>
                   <p>Stay from $40/night</p>
@@ -201,7 +201,7 @@
               <a href="#">
               <article class="Popu">
                 <img
-                  src="/img/accomodation/Puerta-del-Sol.jpg"
+                  src="img/accomodation/Puerta-del-Sol.jpg"
                   alt="Puerta-del-Sol"
                 />
                 <div>
@@ -228,25 +228,25 @@
           <div class="discoverie">
             <article>
               <a href="#">
-                <img src="/img/activities/Water.jpg" alt="sea" />
+                <img src="img/activities/Water.jpg" alt="sea" />
                 <p>Watter activities</p>
               </a>
             </article>
             <article>
               <a href="#">
-                <img src="/img/activities/mountain.jpg" alt="mountain" />
+                <img src="img/activities/mountain.jpg" alt="mountain" />
                 <p>Montain activities</p>
               </a>
             </article>
             <article>
               <a href="#">
-                <img src="/img/activities/Nature.jpg" alt="nature" />
+                <img src="img/activities/Nature.jpg" alt="nature" />
                 <p>Nature activities</p>
               </a>
             </article>
             <article>
               <a href="#">
-                <img src="/img/activities/City.jpg" alt="city" />
+                <img src="img/activities/City.jpg" alt="city" />
                 <p>City activities</p>
               </a>
             </article>
