--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>The sea, nature or in the city</p>
         </div>
         <form action="#" method="get">
-          <i class="fa-solid fa-location-dot"></i>
+          <i class="fa-solid fa-location-dot icone-position"></i>
           <input
             type="text"
             name="location"
